# blog-with-Django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: gunicorn_config.py
app/base/: utils.py  views.py
app/base/management/commands/: populatedb.py
app/blog/: development.py  settings.py  urls.py
app/post/: admin.py  models.py  serializers.py  tests.py  views.py
app/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_cover_image.py  0004_alter_post_cover_image.py  0005_reaction_comment.py  0006_alter_comment_options_alter_reaction_options.py
app/user/: admin.py  models.py  serializers.py  tests.py  views.py
app/user/migrations/: 0001_initial.py
scripts/: lint.sh  makemigrations-migrate.sh  test.sh
